--- a/sources/drop-zone.html
+++ b/sources/drop-zone.html
@@ -2,7 +2,10 @@
 <style>
 
   :host {
-    display: block;
+    display:            block;
+    height:             100%;
+    background-color:   var(--app-light-color);
+    --dz-hover-bgcolor: var(--app-primary-color);
   }
 
   :host([disabled]) {
@@ -10,15 +13,14 @@
   }
 
   #label {
-    display:        flex;
-    flex-direction: column;
-    align-items:    center;
-    height:         calc(100% - 24px);
-    padding:        8px;
-    text-align:     center;
-    cursor:         pointer;
-    color:          var(--dz-color, var(--paper-grey-600));
-    border:         4px dashed var(--dz-color, var(--paper-grey-600));
+    display:         flex;
+    flex-direction:  column;
+    justify-content: center;
+    align-items:     center;
+    height:          calc(100% - 8px);
+    cursor:          pointer;
+    color:           var(--dz-color, var(--paper-grey-600));
+    border:          4px dashed var(--dz-color, var(--paper-grey-600));
   }
 
   :host([disabled]) #label {
