--- a/shared/file-icons.html
+++ b/shared/file-icons.html
@@ -2,7 +2,7 @@
 <iron-iconset-svg name="file-icons" size="24">
   <svg>
     <defs>
-    	<!-- file-thumbnail -->
+      <!-- file-thumbnail -->
       <g id="audio">
         <path d="M21 3H3c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h18c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H3V5h18v14zM8 15c0-1.66 1.34-3 3-3 .35 0 .69.07 1 .18V6h5v2h-3v7.03c-.02 1.64-1.35 2.97-3 2.97-1.66 0-3-1.34-3-3z"></path>
       </g>
@@ -21,6 +21,14 @@
       <!-- drop-zone and add-btn -->
       <g id="file-upload">
         <path d="M9 16h6v-6h4l-7-7-7 7h4zm-4 2h14v2H5z"/>
+      </g>
+      <!-- device-file-card -->
+      <g id="file-open">
+        <path d="M20 6h-8l-2-2H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2zm0 12H4V8h16v10z"/>
+      </g>
+      <!-- web-file-card -->
+      <g id="link">
+        <path d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"/>
       </g>
       <!-- rearrange-list -->
       <g id="low-priority">
