--- a/sources/web-file-card.html
+++ b/sources/web-file-card.html
@@ -1,19 +1,23 @@
 
 <style include="app-shared-styles">
 
-	:host {
-		display: block;
-	}
+  :host {
+    display: block;
+  }
 
   .shared-card {
     padding:          16px;
-    position:  				relative;
-    overflow: 				hidden;
+    position:         relative;
+    overflow:         hidden;
     background-color: var(--app-background-color);
   }
 
+  #link-icon {
+    color: var(--app-primary-color);
+  }
+
   #download-btn {
-  	width: 	100%;
+    width:  100%;
     margin: 32px 0px 0px 0px;
     background-color: var(--app-primary-color);
     color:            var(--constant-light-text);
@@ -25,25 +29,25 @@
   }
 
   #progress {
-  	display: 					flex;
-  	flex-direction: 	column;
-  	justify-content:  space-between;
-  	position:  				absolute;
-  	top: 			 				0px;
-  	right: 						0px;
-  	bottom: 					0px;
-  	left: 		 				0px;
-  	padding: 	 				16px;
-  	transition: 			transform 0.3s var(--custom-ease);
-  	background-color: var(--app-background-color);
+    display:          flex;
+    flex-direction:   column;
+    justify-content:  space-between;
+    position:         absolute;
+    top:              0px;
+    right:            0px;
+    bottom:           0px;
+    left:             0px;
+    padding:          16px;
+    transition:       transform 0.3s var(--custom-ease);
+    background-color: var(--app-background-color);
   }
 
-  .progress {  	
-  	transform: translateY(100%);
+  .progress {   
+    transform: translateY(100%);
   }
 
-  .show {  	
-  	transform: none;
+  .show {   
+    transform: none;
   }
 
   paper-progress {
@@ -52,22 +56,21 @@
   }
 
   #cancel-btn {
-  	width: 			min-content;
+    width:      min-content;
     align-self: center;
-    color: 			var(--app-primary-color);
+    color:      var(--app-primary-color);
   }
 
   #cancel-btn[disabled] {
-  	color: var(--disabled-text-color);
+    color: var(--disabled-text-color);
   }
 
 </style>
 
 
 <div class="shared-card">
-	
-  <paper-input id="linkInput"
-               class="shared-paper-input"
+  
+  <paper-input class="shared-paper-input"
                allowed-pattern="[^/\f/\n/\r/\t/\v]"
                autocapitalize
                autocomplete
@@ -76,25 +79,33 @@
                label="Link to File"
                placeholder="https://example.com/my-file.ext"
                tabindex="0"
-               on-value-changed="__linkInputValueChanged">
+               on-value-changed="__inputValueChanged">
+    <iron-icon id="link-icon"
+               icon="file-icons:link" 
+               slot="prefix">
+    </iron-icon>
   </paper-input>
 
   <paper-button id="download-btn"
-                disabled="[[__computeDownloadBtnDisabled(_linkInputVal)]]"
+                class="shared-paper-button-with-icon"
+                disabled="[[!_valid]]"
                 raised
                 on-click="__downloadBtnClicked">
-    import from web
+    <iron-icon class="shared-iron-icon-inside-paper-button" 
+               icon="app-icons:public">
+    </iron-icon>
+    <span>import from web</span>
   </paper-button>
 
   <div id="progress" 
-  		 class="progress">
-  	<div>Importing from web.</div>
-  	<paper-progress value="[[_progress]]"></paper-progress>
-  	<paper-button id="cancel-btn"
-  								disabled="[[_cancelBtnDisabled]]"
-	                on-click="__cancelBtnClicked">
-	    cancel
-	  </paper-button>
+       class="progress">
+    <div>Importing from web.</div>
+    <paper-progress value="[[_progress]]"></paper-progress>
+    <paper-button id="cancel-btn"
+                  disabled="[[_cancelBtnDisabled]]"
+                  on-click="__cancelBtnClicked">
+      cancel
+    </paper-button>
   </div>
 
 </div>
