Added list property and list-icon-button to file-sources overlay. Updated deps.

--- a/app-file-system.html
+++ b/app-file-system.html
@@ -2,6 +2,7 @@
 <file-sources id="sources"
               accept="[[accept]]"
               hide-dropzone="[[hideDropzone]]"
+              list="[[list]]"
               maxfiles="[[maxfiles]]"
               maxsize="[[maxsize]]"
               multiple="[[multiple]]"
@@ -17,6 +18,7 @@
               files="[[_files]]"
               hide-dropzone="[[hideDropzone]]"
               items="[[_items]]"
+              list="[[list]]"
               on-list-items-changed="__previewListItemsChanged"
               on-list-item-clicked="__previewListItemClicked"
               on-list-item-dropped="__previewListDeleteDrop" 
@@ -24,6 +26,9 @@
               on-list-sort-finished="__previewListSortFinished"
               on-list-upload-complete="__previewListUploadComplete">
 </preview-list>
+
+
+<fullscreen-carousel></fullscreen-carousel>
 
 
 <image-editor id="editor"></image-editor>
