--- a/sources/file-sources.html
+++ b/sources/file-sources.html
@@ -57,6 +57,10 @@
                     fixed-header
                     title="File Sources">
 
+  <list-icon-button list="[[list]]"
+                    slot="top-toolbar-buttons-slot">
+  </list-icon-button>
+
   <div id="content" 
        slot="content">
 
