--- a/carousel/fullscreen-carousel.html
+++ b/carousel/fullscreen-carousel.html
@@ -11,7 +11,7 @@
 <app-header-overlay id="overlay"
                     header-size="1"
                     prebuilt-animation="from-right"
-                    title="Image Gallery">
+                    title="Fullscreen Carousel">
 
   <div id="container" 
        slot="container">
