--- a/shared/file-icons.html
+++ b/shared/file-icons.html
@@ -2,6 +2,10 @@
 <iron-iconset-svg name="file-icons" size="24">
   <svg>
     <defs>
+      <!-- list-icon-button -->
+      <g id="apps">
+        <path d="M4 8h4V4H4v4zm6 12h4v-4h-4v4zm-6 0h4v-4H4v4zm0-6h4v-4H4v4zm6 0h4v-4h-4v4zm6-10v4h4V4h-4zm-6 4h4V4h-4v4zm6 6h4v-4h-4v4zm0 6h4v-4h-4v4z"/>
+      </g>
       <!-- file-thumbnail -->
       <g id="audio">
         <path d="M21 3H3c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h18c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H3V5h18v14zM8 15c0-1.66 1.34-3 3-3 .35 0 .69.07 1 .18V6h5v2h-3v7.03c-.02 1.64-1.35 2.97-3 2.97-1.66 0-3-1.34-3-3z"></path>
@@ -14,6 +18,10 @@
       <g id="cloud">
         <path d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"/>
       </g>
+      <!-- list-icon-button -->
+      <g id="dashboard-90" style="transform-origin: 50% 50%; transform: rotate(90deg);">
+        <path d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"/>
+      </g>
       <!-- preview-list and fullscreen-gallery -->
       <g id="delete">
         <path d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"/>
@@ -25,6 +33,10 @@
       <!-- device-file-card -->
       <g id="file-open">
         <path d="M20 6h-8l-2-2H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2zm0 12H4V8h16v10z"/>
+      </g>
+      <!-- list-icon-button -->
+      <g id="forward-270" style="transform-origin: 50% 50%; transform: rotate(-90deg);">
+        <path d="M12 8V4l8 8-8 8v-4H4V8z"/>
       </g>
       <!-- web-file-card -->
       <g id="link">
