--- a/sources/file-sources.html
+++ b/sources/file-sources.html
@@ -58,7 +58,8 @@
                     title="File Sources">
 
   <list-icon-button list="[[list]]"
-                    slot="top-toolbar-buttons-slot">
+                    slot="top-toolbar-buttons-slot"
+                    on-click="__listBtnClicked">
   </list-icon-button>
 
   <div id="content" 
