Updated app-header-overlay dep so layered overlays will correctly animate again.

--- a/app-file-system.html
+++ b/app-file-system.html
@@ -1,13 +1,4 @@
 
-<style>
-  
-  :host {
-    display: block;
-    position: relative;
-  }
-
-</style>
-
 
 <file-sources id="sources"
               accept="[[accept]]"
@@ -22,7 +13,7 @@
 </file-sources>
 
 
-<!-- <preview-list id="list"
+<preview-list id="list"
               coll="[[coll]]"
               doc="[[doc]]"
               field="[[field]]"
@@ -36,14 +27,10 @@
               on-list-remove-file="__previewListRemoveFile"
               on-list-sort-finished="__previewListSortFinished"
               on-list-upload-complete="__previewListUploadComplete">
-</preview-list> -->
-
-
-<preview-list id="list">
 </preview-list>
 
 
-<!-- <fullscreen-carousel></fullscreen-carousel>
+<fullscreen-carousel></fullscreen-carousel>
 
 
-<image-editor id="editor"></image-editor> -->
+<image-editor id="editor"></image-editor>
