Got preview list to open and display preview items as well as the new list-icon-button to display its badge with item count. Created new camera-roll files.

--- a/app-file-system.html
+++ b/app-file-system.html
@@ -3,6 +3,7 @@
 <file-sources id="sources"
               accept="[[accept]]"
               hide-dropzone="[[hideDropzone]]"
+              items="[[_items]]"
               list="[[list]]"
               maxfiles="[[maxfiles]]"
               maxsize="[[maxsize]]"
