--- a/list/preview-item.html
+++ b/list/preview-item.html
@@ -76,5 +76,5 @@
                  coll="[[coll]]"
                  doc="[[doc]]"
                  field="[[field]]"
-                 file="[[file]]">
+                 file="[[item.file]]">
 </upload-controls>
