--- a/list/upload-controls.html
+++ b/list/upload-controls.html
@@ -13,7 +13,7 @@
   }
 
   #progress-container {
-    width:   100%;
+    width:   calc(100% - 40px);
     padding: 4px 0px 0px 8px;
   }
 
@@ -42,6 +42,10 @@
     top:      0px;
     left:     0px;
     color:    currentColor;
+  }
+
+  *[hidden] {
+    display: none;
   }
 
 </style>
