--- a/list/rearrange-list.html
+++ b/list/rearrange-list.html
@@ -34,10 +34,13 @@
   }
 
   #dropZone {
-    padding:    8px;
-    text-align: center;
-    border:     4px dashed var(--paper-grey-600);
-    color:      var(--app-error-color);
+    display:          flex;
+    flex-direction:   column;
+    justify-content:  center;
+    align-items:      center;  
+    height:           144px;  
+    border:           4px dashed var(--paper-grey-600);
+    color:            var(--app-error-color);
     background-color: var(--divider-color);
   }
 
@@ -50,6 +53,25 @@
     display: none;
   }
 
+
+
+  /*For testing only
+
+  .sortable {
+    position: relative;
+  }
+
+  .test-div {
+    position: absolute;
+    top: 8px;
+    left: 8px;
+    padding: 8px;
+    font-size: 20px;
+    background-color: white;
+    color: rebeccapurple;
+  }
+  */
+
 </style>
 
 
@@ -59,7 +81,7 @@
                 on-sort-finish="__handleSort">                
 
   <template is="dom-repeat" 
-            items="[[items]]">
+            items="[[_rearrangedItems]]">
     <!-- 
         Outter div fixes a bug that causes drag-drop-list classes from being
         blown away whenever an item updates while user is dragging. Probably
@@ -71,10 +93,16 @@
                     coll="[[coll]]"
                     doc="[[doc]]"
                     field="[[field]]"
-                    file="[[item.file]]"
-                    item="[[item]]"
-                    on-click="__itemClicked">
+                    item="[[item]]">
       </preview-item>
+
+
+
+      <!-- Testing only
+       <div class="test-div">[[index]]</div> -->
+
+
+
     </div>
 
   </template>
