Corrected off by one error with assigned indexes to newly added file items. Fixed error with deleting file item after successful upload which caused the upload-controls to enter a second time. Updated app-spinner so that user can navigate to upload list while file is being imported and processed without the spinner hanging when user returns to file-sources overlay. Cleaned up unused imports and code.

--- a/app-file-system.html
+++ b/app-file-system.html
@@ -39,4 +39,7 @@
 <image-editor id="editor"></image-editor>
 
 
-<app-spinner id="spinner" full-screen></app-spinner>
+<app-spinner id="spinner"
+             allow-scrolling
+             full-screen>
+</app-spinner>
