Created position correction for items that are dropped over the delete dropzone while the delete modal is shown. Simplified preview-list delete logic with a cleaner rearrange-list api. Now using mime-type library to return the extention for a file type for display in rearrange-list preview-items info section.  Capitalized all upload-controls text. Formatted code and comments and added element api comments.

--- a/list/rearrange-list.html
+++ b/list/rearrange-list.html
@@ -1,16 +1,21 @@
 
 <style>
+
+  .sortable {
+    position: relative; /* For <drag-drop-list> correction with __correctForDragDropList() method. */
+    z-index:  1;
+  }
   
   .preview {
     display:          inline-flex;
     flex-direction:   column; 
     position:         relative;
-    width:            20vmax;
     height:           calc(20vmax + 36px);
-    min-width:        144px;
+    width:            20vmax;
     min-height:       180px;
-    max-width:        204px;
+    min-width:        144px;
     max-height:       240px;
+    max-width:        204px;
     margin:           4px;
     border-radius:    3px;
     overflow:         hidden;
