--- a/list/rearrange-list.html
+++ b/list/rearrange-list.html
@@ -94,12 +94,12 @@
     -->
     <div class="sortable"
          state-index="[[index]]">
-      <preview-item class$="preview [[__computeSortableClass(item.type)]]"
-                    coll="[[coll]]"
-                    doc="[[doc]]"
-                    field="[[field]]"
-                    item="[[item]]">
-      </preview-item>
+      <rearrange-item class$="preview [[__computeSortableClass(item.type)]]"
+                      coll="[[coll]]"
+                      doc="[[doc]]"
+                      field="[[field]]"
+                      item="[[item]]">
+      </rearrange-item>
 
 
 
