Reorganized preview lists to be two seperate custom elements since there will be substantial differences between the file-list and camera-roll overlays. Fixed several minor issues with drag-drop-list items stacking context as well as enabling scrolling and disabling drag and drop  when the selection icon button is active. All click events on a file-item when selection icon button is active cause checkbox to toggle and item opacity to toggle without affecting the checkbox opacity.  Updated deps.

--- a/app-file-system.html
+++ b/app-file-system.html
@@ -7,6 +7,7 @@
 
 </style>
 
+
 <file-sources id="sources"
               accept="[[accept]]"
               hide-dropzone="[[hideDropzone]]"
@@ -21,16 +22,16 @@
 </file-sources>
 
 
-<preview-list id="list"
-              coll="[[coll]]"
-              doc="[[doc]]"
-              field="[[field]]"
-              files="[[_files]]"
-              hide-dropzone="[[hideDropzone]]"
-              items="[[_items]]"
-              list="[[list]]"
-              on-delete-item="__deleteItemHandler">
-</preview-list>
+<preview-lists id="lists"
+               coll="[[coll]]"
+               doc="[[doc]]"
+               field="[[field]]"
+               files="[[_files]]"
+               hide-dropzone="[[hideDropzone]]"
+               items="[[_items]]"
+               list="[[list]]"
+               on-delete-item="__deleteItemHandler">
+</preview-lists>
 
 
 <fullscreen-carousel></fullscreen-carousel>
