--- a/list/file-list.html
+++ b/list/file-list.html
@@ -6,6 +6,10 @@
     --overlay-background-color:         var(--app-body-color);
   }
 
+  #delete-btn {
+    color: var(--app-error-color, red);
+  }
+
   #select-btn {
     border-radius: 50%;
   }
